--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <script src="https://kit.fontawesome.com/aea20c0f6b.js" crossorigin="anonymous"></script>
     <title>Innergardssalongen</title>
 </head>
+
 <body>
   <header>
+    
   </header>
 
   <section>
