modified phone number on index.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<div class="d-none d-md-block">
 					<p class="navbar-text my-auto mr-2 hvr-forward"><i>Make An Appointment</i>
 						<i class="fas fa-phone"></i></p>
-					<a href="login/053310761" class="btn btn-danger hvr-grow">Book Now</a>
+					<a href="053310761" class="btn btn-danger hvr-grow">Book Now</a>
 				</div>
 			</nav>
 
