--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 								<a class="dropdown-item hvr-rectangle-out" href="#">Bridal</a>
 							</div>
 						</li>
-						<li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="login/053310761">Book
+						<li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="tel:053310761">Book
 								Now</a></li>
 					</ul>
 				</div>
 				<div class="d-none d-md-block">
 					<p class="navbar-text my-auto mr-2 hvr-forward"><i>Make An Appointment</i>
 						<i class="fas fa-phone"></i></p>
-					<a href="053310761" class="btn btn-danger hvr-grow">Book Now</a>
+					<a href="tel:053310761" class="btn btn-danger hvr-grow">Book Now</a>
 				</div>
 			</nav>
 
