--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						</li>
 						<li class="nav-item">
 							<a class="nav-link hvr-wobble-horizontal mr-2"
-								href="https://goo.gl/maps/6X3JQ3SSrNiTM1HEA">Location</a>
+						       target="_blank" href="https://goo.gl/maps/6X3JQ3SSrNiTM1HEA">Location</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle hvr-wobble-horizontal mr-2" href="#"
@@ -61,14 +61,14 @@
 								<a class="dropdown-item hvr-rectangle-out" href="#">Bridal</a>
 							</div>
 						</li>
-						<li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="tel:053310761">Book
+						<li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" target="_blank" href="tel:0720107276">Book
 								Now</a></li>
 					</ul>
 				</div>
 				<div class="d-none d-md-block">
 					<p class="navbar-text my-auto mr-2 hvr-forward"><i>Make An Appointment</i>
 						<i class="fas fa-phone"></i></p>
-					<a href="tel:053310761" class="btn btn-danger hvr-grow">Book Now</a>
+					<a target="_blank" href="tel:0720107276" class="btn btn-danger hvr-grow">Book Now</a>
 				</div>
 			</nav>
 
@@ -140,7 +140,7 @@
 							<footer class="container-fluid">
 								<div class="row social-links">
 									<div class="col-12">
-										<h5 class="socially uppercase">Social Network</h5>
+										<h5 class="socially uppercase">Follow Us On</h5>
 										<ul class="inline-block">
 											<li class="list-inline-item">
 												<a target="_blank" href="https://www.instagram.com/innergardssalongen/">
