modified index.html and css files

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 							<footer class="container-fluid">
 								<div class="row social-links">
 									<div class="col-12">
-										<h5 class="socially uppercase">Follow Us On</h5>
+										<h5 class="socially uppercase">Follow us</h5>
 										<ul class="inline-block">
 											<li class="list-inline-item">
 												<a target="_blank" href="https://www.instagram.com/innergardssalongen/">
