modefied index and css files

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item hvr-rectangle-out" href="#">Blowouts</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item hvr-rectangle-out" href="#">color</a>
+								<a class="dropdown-item hvr-rectangle-out" href="#">Color</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item hvr-rectangle-out" href="#">Treatments</a>
 								<div class="dropdown-divider"></div>
