modified index and css files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		type="text/css" />
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 	<script src="https://kit.fontawesome.com/aea20c0f6b.js" crossorigin="anonymous"></script>
-	<title>Innergardssalongen</title>
+	<title>innergardssalongen</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
 		<div class="row wrapper">
 
 			<div class="col-12 jumbotron head-er">
-				<h1 class="title">INNERGÅRDSSALONGEN <i class="fas fa-cut"></i></h1>
+				<h1 lang="sv-SE" class="title">INNERGÅRDSSALONGEN <i class="fas fa-cut"></i></h1>
 			</div>
 
 
@@ -72,8 +72,8 @@
 				</div>
 			</nav>
 
-			<div class="d-sm-12 d-block mumsuz-pic">
-				<img src="images/logo.jpg" alt="logo-photo" class="img-responsive logo-image img-center">
+			<div class="d-sm-12 d-block image-logo">
+				<img src="images/logo.jpg" alt="logo-image" class="img-responsive logo-image img-center">
               </div>
 
 			</div>
@@ -114,7 +114,9 @@
 					</div>
 				</div>
                 </div>
-            <section class="container-fluid">
+
+
+            <!--<section class="container-fluid">-->
 				<div class="row gallery">
 					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-3">
 						<img src="images/pic10.png" alt="photo1" class="img-responsive sub-images">
@@ -133,7 +135,7 @@
                                 </div>
 								</div>
 							
-            </section>     
+          <!--  </section>-->     
 
 
 
