--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
 
 
-            <!--<section class="container-fluid">-->
+            <section class="container-fluid">
 				<div class="row gallery">
 					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-3">
 						<img src="images/pic10.png" alt="photo1" class="img-responsive sub-images">
@@ -134,8 +134,7 @@
 									<img src="images/pic13.jpg" alt="photo4" class="img-responsive sub-images">
                                 </div>
 								</div>
-							
-          <!--  </section>-->     
+						</section>   
 
 
 
