--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 						<p>Sundsgatan 35, 662 42, Säffle</p>
 					</div>
 				</div>
-                </div>
+                 </div>
 
 
-            <!--<section class="container-fluid">-->
+            <section class="container-fluid">
 				<div class="row gallery">
 					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-3">
 						<img src="images/pic10.png" alt="photo1" class="img-responsive sub-images">
@@ -134,8 +134,7 @@
 									<img src="images/pic13.jpg" alt="photo4" class="img-responsive sub-images">
                                 </div>
 								</div>
-							
-          <!--  </section>-->     
+				</section>   
 
 
 
