--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 			<div class="row img-contact-info">
 
-				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6"><img class="img-responsive mamas-pic" src="images/mama2.jpg" alt="mamas-photo">
+				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mums-photo"><img class="img-responsive mamas-pic" src="images/mama2.jpg" alt="mamas-photo">
           </div>
 
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 contact-info jumbotron">
@@ -118,20 +118,20 @@
 
             <section class="container-fluid">
 				<div class="row gallery">
-					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-3">
-						<img src="images/pic10.png" alt="photo1" class="img-responsive sub-images">
+					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-3 image-1">
+						<img src="images/pic10.png" alt="photo1" class="img-1 sub-images1">
                     </div>
 
-						<div class="col-xs-12 col-sm-12 col-md-4 col-lg-3">
-							<img src="images/pic12.png" alt="photo2" class="img-responsive sub-images">
+						<div class="col-xs-12 col-sm-12 col-md-4 col-lg-3 image-2">
+							<img src="images/pic12.png" alt="photo2" class="img-responsive sub-images2">
                         </div>
 
-							<div class="d-none d-sm-block col-md-4 col-lg-3">
-								<img src="images/pic11.png" alt="photo3" class="img-responsive sub-images">
+							<div class="d-none d-sm-block col-md-4 col-lg-3 image-3">
+								<img src="images/pic11.png" alt="photo3" class="img-responsive sub-images3">
                            </div>
 
-								<div class="d-none d-lg-block col-lg-3">
-									<img src="images/pic13.jpg" alt="photo4" class="img-responsive sub-images">
+								<div class="d-none d-lg-block col-lg-3 image-4">
+									<img src="images/pic13.jpg" alt="photo4" class="img-responsive sub-images4">
                                 </div>
 								</div>
 				</section>   
