--- a/index.html
+++ b/index.html
@@ -16,18 +16,22 @@
 
 <body>
 	<div class="container-fluid">
-		<div class="row wrapper">
-
-			<div class="col-12 jumbotron head-er">
-				<h1 lang="sv-SE" class="title">INNERGÅRDSSALONGEN <i class="fas fa-cut"></i></h1>
+		<div class="container-fluid">	
+			<div class="row wrapper">
+				<div class="col-12 jumbotron">
+					<h1 lang="sv-SE" class="title">INNERGÅRDSSALONGEN <i class="fas fa-cut"></i></h1>
+				</div>
 			</div>
+		</div>
 
-
+            <!--------------------Nav menu---------------------------->
 			<nav class="navbar navbar-expand-sm navbar-light">
 				<a class="navbar-brand" href="#">Salon</a>
-				<button class="navbar-toggler md-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+				<button class="navbar-toggler md-auto" type="button" data-toggle="collapse"
+					data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 				<div class="collapse navbar-collapse" id="navbarNavDropdown">
 					<ul class="navbar-nav">
 						<li class="nav-item active">
@@ -38,8 +42,8 @@
 							<a class="nav-link hvr-wobble-horizontal mr-2" href="about.html">About</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link hvr-wobble-horizontal mr-2"
-						       target="_blank" href="https://goo.gl/maps/6X3JQ3SSrNiTM1HEA">Location</a>
+							<a class="nav-link hvr-wobble-horizontal mr-2" target="_blank"
+								href="https://goo.gl/maps/6X3JQ3SSrNiTM1HEA">Location</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle hvr-wobble-horizontal mr-2" href="#"
@@ -61,125 +65,131 @@
 								<a class="dropdown-item hvr-rectangle-out" href="#">Bridal</a>
 							</div>
 						</li>
-						<li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" target="_blank" href="tel:0720107276">Book
+						<li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" target="_blank"
+								href="tel:0720107276">Book
 								Now</a></li>
 					</ul>
 				</div>
 				<div class="d-none d-md-block">
 					<p class="navbar-text my-auto mr-2 hvr-forward"><i>Make An Appointment</i>
-						<i class="fas fa-phone"></i></p>
+						<i class="fas fa-phone"></i>
+					</p>
 					<a target="_blank" href="tel:0720107276" class="btn btn-danger hvr-grow">Book Now</a>
 				</div>
 			</nav>
-
-			<div class="d-sm-12 d-block image-logo">
+	</div>
+	<!--------------------Logo image---------------------------->
+	<div class="container">
+	<section class="container my-5">
+		<div class="row">
+			<div class="col-12 image-logo">
 				<img src="images/logo.jpg" alt="logo-image" class="img-responsive logo-image img-center">
-              </div>
-
 			</div>
-			<br>
+		</div>
 
-			<div class="row sub-logo">
-				<div class="col-sm-12 d-block">
-					<h2 class="sub-headx">First Class Luxury Hair Experience <i class="fas fa-thumbs-up"></i></h2>
+		<br>
+
+		<div class="row justify-content-center my-2">
+			<div class="col-sm-12 d-block">
+				<h3 class="quote">First Class Luxury Hair Experience <i class="fas fa-thumbs-up"></i></h3>
+			</div>
+		</div>
+	</section>
+	</div>
+
+	<!--------------------Photo and Time section---------------------------->
+	<div class="container cont">
+		<div class="row img-contact-info justify-content-center">
+
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mums-photo"><img class="img-responsive mamas-pic"
+					src="images/mama2.jpg" style="width: 100%; height: 70%;" alt="mamas-photo">
+			</div>
+
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 contact-info">
+				<h5 class="phone text-center">Contact Info <i class="fas fa-phone"></i></h5>
+				<p>Tel: 053310761 </p>
+				<hr>
+				<br>
+				<h5 class="opening-hours text-center">Opening Hours</h5>
+
+				<pre>Monday:      08:00 - 16:00</pre>
+				<pre>Tuesday:     08:00 - 16:00</pre>
+				<pre>Wednesday:   08:00 - 16:00</pre>
+				<pre>Thursday:    08:00 - 16:00</pre>
+				<pre>Friday:      08:00 - 16:00</pre>
+				<pre>Saturday:           closed</pre>
+				<pre>Sunday:             closed</pre>
+
+				<hr>
+				<br>
+				<h5 class="location text-center">Location</h5>
+				<p>Sundsgatan 35, 662 42, Säffle</p>
+			</div>
+		</div>
+	</div>
+	<!--------------------Galary Section---------------------------->
+	<div class="container">
+		<div class="row row-cols-1 row-cols-md-3 g-4 img-galary">
+			<div class="col">
+				<div class="card h-100">
+					<img src="images/pic10.png" class="card-img-top" alt="...">
 				</div>
 			</div>
-
-
-
-			<div class="row img-contact-info">
-
-				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mums-photo"><img class="img-responsive mamas-pic" src="images/mama2.jpg" alt="mamas-photo">
-          </div>
-
-					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 contact-info jumbotron">
-						<h3 class="phone text-center">Contact Info <i class="fas fa-phone"></i></h3>
-						<p>Tel: 053310761 </p>
-						<hr>
-						<br>
-						<h3 class="opening-hours text-center">Opening Hours</h3>
-
-						<pre>Monday:      08:00 - 16:00</pre>
-                        <pre>Tuesday:     08:00 - 16:00</pre>
-                        <pre>Wednesday:   08:00 - 16:00</pre>
-                        <pre>Thursday:    08:00 - 16:00</pre>
-                        <pre>Friday:      08:00 - 16:00</pre>
-                        <pre>Saturday:           closed</pre>
-                        <pre>Sunday:             closed</pre>
-
-						<hr>
-						<br>
-						<h3 class="location text-center">Location</h3>
-						<p>Sundsgatan 35, 662 42, Säffle</p>
-					</div>
+			<div class="col">
+				<div class="card h-100">
+					<img src="images/pic12.png" class="card-img-top" alt="...">
 				</div>
-                 </div>
+			</div>
+			<div class="col">
+				<div class="card h-100">
+					<img src="images/pic13.jpg" class="card-img-top" alt="...">
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<!--------------------Footer Section---------------------------->
+	<footer class="container-fluid">
+		<div class="row social-links">
+			<div class="col-12">
+				<h5 class="socially uppercase">Follow us</h5>
+				<ul class="inline-block">
+					<li class="list-inline-item">
+						<a target="_blank" href="https://www.instagram.com/innergardssalongen/">
+							<i class="fab fa-instagram" aria-hidden="true"></i>
+							<span class="sr-only">Instagram</span>
+						</a>
+					</li>
 
+					<li class="list-inline-item">
+						<a target="_blank" href="https://www.facebook.com/Innerg%C3%A5rdssalongen-107926477317756/">
+							<i class="fab fa-facebook" aria-hidden="true"></i>
+							<span class="sr-only">Facebook</span>
+						</a>
+					</li>
 
-            <section class="container-fluid">
-				<div class="row gallery">
-					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-3 image-1">
-						<img src="images/pic10.png" alt="photo1" class="img-1 sub-images1">
-                    </div>
+					<li class="list-inline-item">
+						<a target="_blank" href="#">
+							<i class="fab fa-twitter" aria-hidden="true"></i>
+							<span class="sr-only">Twitter</span>
+						</a>
+					</li>
 
-						<div class="col-xs-12 col-sm-12 col-md-4 col-lg-3 image-2">
-							<img src="images/pic12.png" alt="photo2" class="img-responsive sub-images2">
-                        </div>
+				</ul>
+			</div>
 
-							<div class="d-none d-sm-block col-md-4 col-lg-3 image-3">
-								<img src="images/pic11.png" alt="photo3" class="img-responsive sub-images3">
-                           </div>
+		</div>
+	</footer>
 
-								<div class="d-none d-lg-block col-lg-3 image-4">
-									<img src="images/pic13.jpg" alt="photo4" class="img-responsive sub-images4">
-                                </div>
-								</div>
-				</section>   
-
-							<footer class="container-fluid">
-								<div class="row social-links">
-									<div class="col-12">
-										<h5 class="socially uppercase">Follow us</h5>
-										<ul class="inline-block">
-											<li class="list-inline-item">
-												<a target="_blank" href="https://www.instagram.com/innergardssalongen/">
-													<i class="fab fa-instagram" aria-hidden="true"></i>
-													<span class="sr-only">Instagram</span>
-												</a>
-											</li>
-
-											<li class="list-inline-item">
-												<a target="_blank"
-													href="https://www.facebook.com/Innerg%C3%A5rdssalongen-107926477317756/">
-													<i class="fab fa-facebook" aria-hidden="true"></i>
-													<span class="sr-only">Facebook</span>
-												</a>
-											</li>
-
-
-
-											<li class="list-inline-item">
-												<a target="_blank" href="#">
-													<i class="fab fa-twitter" aria-hidden="true"></i>
-													<span class="sr-only">Twitter</span>
-												</a>
-											</li>
-
-										</ul>
-									</div>
-
-								</div>
-							</footer>
-
-							<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-								integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-								crossorigin="anonymous"></script>
-							<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-								integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-								crossorigin="anonymous"></script>
-							<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-								integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-								crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+		crossorigin="anonymous"></script>
 </body>
 
 </html>
